remainder Files modified - [_viewForm,_viewInspection,FormService,LetterService,Letters.jar,pom.xml]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -24,7 +24,7 @@
                                 <wm-gridrow name="gridrow98">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn181"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn182" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="labelHostil" caption="Please Take Caution" backgroundcolor="yellow" fontweight="bold" show="bind:!!isHostile"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="labelHostile" caption="Please Take Caution" backgroundcolor="yellow" fontweight="bold" show="false"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn183"></wm-gridcolumn>
                                 </wm-gridrow>
@@ -241,8 +241,7 @@
                                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                         <wm-grid-action key="addNewRow" display-name="Add Attachment" show="bind:Variables.stvCurrentStatus.dataSet.allowAttachments" class="btn-primary" iconclass="wi wi-plus" title="Add Attachment"
                                                         action="Widgets.dialogUploadDocument.open()" shortcutkey="" disabled="false"></wm-grid-action>
-                                                        <wm-grid-row-action key="updaterow" display-name="" show="bind:Variables.stvCurrentStatus.dataSet.allowAttachments" class="btn-transparent" iconclass="wi wi-pencil" title="Edit"
-                                                        action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
+                                                        <wm-grid-row-action key="updaterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pencil" title="Edit" action="updaterowAction($event)" disabled="false"></wm-grid-row-action>
                                                         <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-file-download" title="Download" action="Variables.svDownloadDocument.invoke()"
                                                         disabled="false"></wm-grid-row-action>
                                                         <wm-grid-row-action key="deleterow" display-name="" show="bind:Variables.stvCurrentStatus.dataSet.allowAttachments" class="btn-transparent" iconclass="wi wi-trash" title="Delete"
