deleted the "Letters" panel from the Form Status Settings dialog Files modified - [EditForm,pom.xml]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -529,25 +529,7 @@
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow32-02">
-                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn60_2-02">
-                                                                <wm-panel iconclass="wi wi-notepad" name="panel6_1-02" title="Letters" class="panel-primary">
-                                                                    <wm-gridcolumn name="gridcolumn2-02" columnwidth="4" padding="unset 1em unset unset">
-                                                                        <wm-form-field name="sendLetter" displayname="Send Letter" show="true" primary-key="false" generator="assigned" key="sendLetter" type="boolean" widget="checkbox" defaultvalue="false"
-                                                                        placeholder="" hint="If selected, letter attachments based on the selected letter templates will be sent to the user who submitted the form and the users who the form has been shared with when the form enters this status."
-                                                                        checkedvalue="true" uncheckedvalue="false"></wm-form-field>
-                                                                    </wm-gridcolumn>
-                                                                    <wm-gridcolumn name="gridcolumn2-03" columnwidth="4" padding="unset 1em unset unset">
-                                                                        <wm-form-field name="letterTemplate" displayname="Letter Template" show="true" primary-key="false" generator="assigned" key="letterTemplate" type="string" readonly="false" required="false"
-                                                                        widget="select" maxchars="255" dataset="bind:Variables.stvLetterTemplates.dataSet" datafield="dataValue" displayfield="dataValue" placeholder="Select value" width="180px"></wm-form-field>
-                                                                        <wm-label padding="unset 0.5em" caption="Select which letter templates will be used to generate letters for this status." class="help-block" fontsize="0.8" fontunit="em"
-                                                                        name="label39-03"></wm-label>
-                                                                    </wm-gridcolumn>
-                                                                    <wm-gridcolumn name="gridcolumn2-03" columnwidth="4" padding="unset 1em unset unset">
-                                                                        <wm-form-field name="attacheToEmail" displayname="Attach to Email" show="true" primary-key="false" generator="assigned" key="attachToEmail" type="boolean" widget="checkbox" defaultvalue="false"
-                                                                        placeholder="" hint="Attach the letters to the email associated with this form status." checkedvalue="true" uncheckedvalue="false"></wm-form-field>
-                                                                    </wm-gridcolumn>
-                                                                </wm-panel>
-                                                            </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="12" name="gridcolumn60_2-02"></wm-gridcolumn>
                                                         </wm-gridrow>
                                                         <wm-gridrow name="gridrow36_2">
                                                             <wm-gridcolumn columnwidth="12" name="gridcolumn64_2">
