Various fixes for various things. Files modified - [_viewForm,MunicipalityCheckOut,_viewInspection,LetterService,pom.xml,Cx2DataAccess.java]

--- a/src/main/webapp/pages/_viewForm/_viewForm.html
+++ b/src/main/webapp/pages/_viewForm/_viewForm.html
@@ -477,7 +477,7 @@
                                         </wm-gridrow>
                                     </wm-layoutgrid>
                                 </wm-tabpane>
-                                <wm-tabpane name="tabpaneLetters" title="LETTERS" accessroles="MunicipalityEmployee,MunicipalityAdmin,InspectorManager,Inspector,GISAdmin,CXVendorAdmin,CXAdmin,CodeOfficer,CodeManager">
+                                <wm-tabpane name="tabpaneLetters" title="LETTERS" accessroles="MunicipalityEmployee,MunicipalityAdmin,InspectorManager,Inspector,GISAdmin,CXAdmin,CodeOfficer,CodeManager">
                                     <wm-grid title="" dataset="bind:Variables.lvLetterTemplates.dataSet" navigation="Classic" name="gridLetters">
                                         <wm-grid-column binding="letterTitle" caption="Letter Title" type="string" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                         <wm-grid-column binding="rowOperations" caption="Actions" type="custom" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
