--- a/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
+++ b/src/main/webapp/pages/MunicipalityInspections/MunicipalityInspections.html
@@ -86,7 +86,7 @@
                                         <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-schedule"></wm-icon>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="9" padding="0.8em unset unset unset" horizontalalign="center" name="gridcolumn25_1" class="col-xs-9">
-                                        <wm-label name="tileTitle" caption="Schedule Inspections" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                        <wm-label name="tileTitle" caption="Inspection Assignment" class="p" fontsize="1.5" fontunit="em"></wm-label>
                                         <wm-label caption="bind:Variables.svCountInspectionsToBeScheduledByMunicipality.dataSet[$i].inspectionsToBeScheduled" fontsize="3" fontunit="em" class="p" name="label14"></wm-label>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
