--- a/src/main/webapp/pages/ScheduleInspections/ScheduleInspections.html
+++ b/src/main/webapp/pages/ScheduleInspections/ScheduleInspections.html
@@ -12,7 +12,7 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow17">
                     <wm-gridcolumn columnwidth="6" name="gridcolumn29" padding="2em unset">
-                        <wm-label caption="Schedule Inspections" fontweight="bold" name="label2" class="h4"></wm-label>
+                        <wm-label caption="Inspection Assignment" fontweight="bold" name="label2" class="h4"></wm-label>
                     </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="6" name="gridcolumn30" padding="2em unset">
                         <wm-panel iconclass="" autoclose="outsideClick" name="panelSelectMunicipality" title="" class="panel-transparent" content="selectMunicipality">
