--- a/src/main/webapp/pages/MyMessages/MyMessages.html
+++ b/src/main/webapp/pages/MyMessages/MyMessages.html
@@ -48,7 +48,7 @@
                                                     <wm-grid-row-action key="updaterow" display-name="" show="bind:!row['messageRead']" class="btn-transparent" iconclass="wi wi-check" title="Mark as Read" action="Variables.svSetMessageReadStatus.invoke();updaterowAction($event)"
                                                     disabled="false"></wm-grid-row-action>
                                                     <wm-grid-row-action key="deleterow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Source" action="deleterowAction($event)" disabled="false"></wm-grid-row-action>
-                                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-reply" title="Reply" action="Widgets.dialogReply.open();customRowAction($event)"
+                                                    <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-reply" title="Reply" action="Widgets.dialogReply.open();Variables.svSetMessageReadStatus.invoke();customRowAction($event)"
                                                     disabled="false"></wm-grid-row-action>
                                                 </wm-grid>
                                             </wm-gridcolumn>
