--- a/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
+++ b/src/main/webapp/pages/MunicipalityAdministration/MunicipalityAdministration.html
@@ -140,7 +140,20 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn23_2"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn23_2" padding="2em unset" horizontalalign="center">
+                        <wm-tile width="240px" height="160px" class="bg-primary" on-click="Variables.goToPage_EmployeeLocations.invoke()" name="tile9">
+                            <wm-layoutgrid height="100%" name="layoutgrid10">
+                                <wm-gridrow height="100%" name="gridrow13">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" class="col-xs-3" name="gridcolumn28">
+                                        <wm-icon iconsize="3em" iconclass="wi wi-location-on" name="icon9"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" class="col-xs-9" name="gridcolumn29">
+                                        <wm-label caption="Employees' Locations" class="p" fontsize="1.5" fontunit="em" name="label16"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
